# learn-solana

./: .gitignore  README.md
day_1/: Anchor.toml
day_1/programs/day_1/src/: lib.rs
day_2/: Anchor.toml
day_2/programs/day_2/src/: lib.rs
day_2/tests/: day_2.ts
day_2_function_arguments/programs/day_2/src/: lib.rs
day_3/programs/day_3/src/: lib.rs
day_3/tests/: day_3.ts
day_3_solana_anchor_program_idl/: Anchor.toml
day_3_solana_anchor_program_idl/programs/day_3/src/: lib.rs
day_3_solana_anchor_program_idl/tests/: day_3.ts
day_4/: Anchor.toml
day_4/programs/day_4/src/: lib.rs
day_4/tests/: day_4.ts
day_4_require_revert_custom_errors/: Anchor.toml
day_4_require_revert_custom_errors/programs/day_4_require_revert_custom_errors/: Cargo.toml
day_4_require_revert_custom_errors/programs/day_4_require_revert_custom_errors/src/: lib.rs
day_4_require_revert_custom_errors/tests/: day_4_require_revert_custom_errors.ts
day_5/: Anchor.toml
day_5/programs/day_5/: Cargo.toml
day_5/programs/day_5/src/: lib.rs
day_5/tests/: day_5.ts
day_6/: Anchor.toml
day_6/programs/day_6/: Cargo.toml
day_6/programs/day_6/src/: lib.rs
day_6/tests/: day_6.ts
sysvar/: Anchor.toml
sysvar/programs/sysvar/: Cargo.toml
sysvar/programs/sysvar/src/: lib.rs
sysvar/tests/: sysvar.ts
